--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,16 @@ services:
       - 8000:5000
     environment:
       - BIND_HOST=0.0.0.0
-      - BIND_PORT=5000
+      - BIND_PORT=8888
       - NEO4J_HOST=192.168.99.1
-      - NEO4J_PORT=7687
+      - NEO4J_PORT=7688
       - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=neo4j
-      - NEO4J_SCHEME=bolt
+      - NEO4J_PASSWORD=xyzzy
+      - NEO4J_SCHEME=bolt+routing
     deploy:
       mode: replicated
       endpoint_mode: vip
-      replicas: 6
+      replicas: 2
   visualizer:
     image: dockersamples/visualizer
     ports:
