--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,18 @@ version: '3.8'
 
 services:
   api_server:
-    image: dinhphien/flask_api:v0.0.8
+    image: dinhphien/flask_api:v0.0.9
     ports:
-      - 8000:5000
+      - 8888:5000
     environment:
       - BIND_HOST=0.0.0.0
       - BIND_PORT=8888
       - NEO4J_HOST=192.168.99.1
-      - NEO4J_PORT=7688
+      - NEO4J_PORT=7687
       - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=xyzzy
-      - NEO4J_SCHEME=bolt+routing
+      - NEO4J_PASSWORD=neo4j
+#      - NEO4J_SCHEME=bolt+routing
+      - NEO4J_SCHEME=bolt
     deploy:
       mode: replicated
       endpoint_mode: vip
